--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "expo": "17.0.0",
+    "exponent-server-sdk": "^2.3.1",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
     "react-redux": "^5.0.5",
